@@ -1,3 +1,5 @@
+* Give compileSelector() ability to process custom code before and after the primary iterator via `header` and `footer` properties of the callbacks return object. [jddalton]
+
 * Merge compileGroup() and compileSingle() into compileSelector(). [jddalton]
 
 * Ensure `lastNormalized` isn't modifed by selector optimizations in select_regular(). [jddalton]
